--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/Index.cshtml
@@ -36,7 +36,7 @@
 	<div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 		<h1 class="logo me-auto me-lg-0"><a href="#">享食點餐趣</a></h1>
         <div class="cart__price" style="color: white;">消費金額: <span style="color: white;">$0.00</span></div>
-        <a href="#" class="cartPrice"><i class="fa fa-shopping-cart" style="font-size: 24px;"></i></a>
+        <a asp-controller="ShoppingCart" class="cartPrice"><i class="fa fa-shopping-cart" style="font-size: 24px;"></i></a>
 	</div>
 </header>
 
@@ -67,10 +67,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-						<img src="~/img/menu/bread-barrel.jpg" style="width:200px; border-radius:15px"/>
+                        <img src="~/img/menu/bread-barrel.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -84,10 +84,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/caesar.jpg" style="width:200px; border-radius:15px"/>
+                        <img src="~/img/menu/caesar.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -101,10 +101,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/cake.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/cake.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -118,10 +118,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/greek-salad.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/greek-salad.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -135,10 +135,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/lobster-bisque.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/lobster-bisque.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -152,10 +152,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/lobster-roll.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/lobster-roll.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -169,10 +169,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/mozzarella.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/mozzarella.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -186,10 +186,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/spinach-salad.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/spinach-salad.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -203,10 +203,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
                 <div class="product__item">
                     <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/tuscan-grilled.jpg" style="width:200px; border-radius:15px" />
+                        <img src="~/img/menu/tuscan-grilled.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
                             <span>Cupcake</span>
                         </div>
@@ -237,4 +237,5 @@
     <script src="~/orderforhere/startorderjs/jquery.nice-select.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery-3.3.1.min.js"></script>
 	<script src="~/orderforhere/startorderjs/main.js"></script>
+	<script src="~/orderforhere/startorderjs/owl.carousel.min.js"></script>
 }
