--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderLogin/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@section Styles
 {
     <link href="~/orderforhere/orderforherelogincss/orderforhere.css" rel="stylesheet" />
+
+    
 }
 
 <!-- Start  -->
@@ -23,7 +25,7 @@
             <p>尚未成為會員？</p>
         </div>
         <div class="start-order-button" >
-            <button><a class="button-link" style="color:white" asp-area="OrderForHere" asp-controller="StartOrder" asp-action="Index">開始點餐</a></button>
+            <a class="btn btn-outline-warning btn-lg" asp-area="OrderForHere" asp-controller="StartOrder" asp-action="Index">開始點餐</a>
         </div>
     </form>
 </div>
