修改會員管理抓取資料方式

--- a/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
@@ -291,7 +291,8 @@
                 GetMembers() {
                     axios.get("/MemberManagement/GetMember"),
                     then(response => {
-                        this.member = response.data
+                            console(response.data)
+                        //this.member = response.data
                     })
             }
     </script>
