--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/ShoppingCart/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/ShoppingCart/Index.cshtml
@@ -208,14 +208,7 @@
 					</form>
 				</div>
 				<div class="cart__total">
-					<h3 style="padding-bottom:10px; color:black">餐點明細</h3>
-					<ul>
-						<li style="font-size: 20px">原價: <span>$ 169.50</span></li>
-						<li style="font-size: 20px">總價: <span>$ 169.50</span></li>
-					</ul>
-					<a href="#" class="primary-btn">現場結帳</a>
-					<br />
-					<a href="#" class="primary-btn">線上結帳</a>
+					<a href="#" class="primary-btn">提交訂單</a>
 				</div>
 			</div>
 		</div>
@@ -225,12 +218,12 @@
 @section Scripts
 	{
 	<script src="~/orderforhere/startorderjs/bootstrap.min.js"></script>
+	<script src="~/orderforhere/startorderjs/jquery-3.3.1.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.barfiller.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.magnific-popup.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.nicescroll.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.slicknav.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.nice-select.min.js"></script>
-	<script src="~/orderforhere/startorderjs/jquery-3.3.1.min.js"></script>
 	<script src="~/orderforhere/startorderjs/owl.carousel.min.js"></script>
 	<script src="~/orderforhere/startorderjs/main.js"></script>
 }
