--- a/EnjoyEat/EnjoyEat/Views/Reservations/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/Index.cshtml
@@ -1,66 +1,72 @@
 ﻿@section Styles{
     <link href="~/css/reservations.css" rel="stylesheet" />
 }
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.css">
 <main id="main">
-      <!-- ======= Book A Table Section ======= -->
-      <section id="book-a-table" class="book-a-table">
-        <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <h2>立即訂位</h2>
-            <p>訂位</p>
-          </div>
-          <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
-                <div class="row">
-                    <label>用餐人數</label>
-                    <div class="col-lg-4 col-md-6 form-group d-flex">
-                        <select name="" id="adultPicker" class="book-a-table form-control form-select">
-                            <option value="" disabled>請選擇用餐人數</option>
-                            <option value="1">1位大人</option>
-                            <option value="2">2位大人</option>
-                            <option value="3">3位大人</option>
-                            <option value="4">4位大人</option>
-                            <option value="5">5位大人</option>
-                        </select>
-                        <select name="" id="kidPicker" class="book-a-table form-control form-select">
-                            <option value="1">0位小孩</option>
-                            <option value="1">1位小孩</option>
-                            <option value="2">2位小孩</option>
-                            <option value="3">3位小孩</option>
-                            <option value="4">4位小孩</option>
-                            <option value="5">5位小孩</option>
+    <div id="d1">
+        <!-- ======= Book A Table Section ======= -->
+        <section id="book-a-table" class="book-a-table">
+            <div class="container" data-aos="fade-up">
+                <div class="section-title">
+                    <h2>立即訂位</h2>
+                    <p>訂位</p>
+                </div>
+                <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+                    <div class="row">
+                        <label>用餐人數</label>
+                        <div class="col-lg-4 col-md-6 form-group d-flex">
+                            <select name="" id="adultPicker" class="book-a-table form-control form-select">
+                                <option value="" disabled>請選擇用餐人數</option>
+                                <option value="1">1位大人</option>
+                                <option value="2">2位大人</option>
+                                <option value="3">3位大人</option>
+                                <option value="4">4位大人</option>
+                                <option value="5">5位大人</option>
+                            </select>
+                            <select name="" id="kidPicker" class="book-a-table form-control form-select">
+                                <option value="1">0位小孩</option>
+                                <option value="1">1位小孩</option>
+                                <option value="2">2位小孩</option>
+                                <option value="3">3位小孩</option>
+                                <option value="4">4位小孩</option>
+                                <option value="5">5位小孩</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div id="d1" class="col-lg-2 col-md-6 form-group">
+                        <!-- datepicker這邊要調整 -->
+                        <label for="datepicker">用餐日期</label>
+                        <date-picker v-model="ReserveDate"
+                                     value-type="format"
+                                     name="ReserveDate"
+                                     id="datepicker"
+                                     class="datepicker p-0"
+                                     placeholder="請選擇用餐日期"></date-picker>
+                    </div>
+                    <label>用餐時段</label>
+                    <div class="col-lg-2 col-md-6 form-group" id="mealTimePicker">
+                        <select name="time" id="mealTime" class="book-a-table form-control">
+                            <option value="" disabled>請選擇用餐時段</option>
+                            <option value="">11:00</option>
+                            <option value="">13:00</option>
+                            <option value="">15:00</option>
+                            <option value="">17:00</option>
+                            <option value="">19:00</option>
                         </select>
                     </div>
-                </div>
-                <div>
-                <label>用餐日期</label>
-                <!-- 月曆這邊要調整 -->
-                </div>
-                <label>用餐時段</label>
-                <div class="col-lg-2 col-md-6 form-group" id="mealTimePicker">
-                    <select name="time" id="mealTime" class="book-a-table form-control">
-                        <option value="" disabled>請選擇用餐時段</option>
-                        <option value="">11:00</option>
-                        <option value="">13:00</option>
-                        <option value="">15:00</option>
-                        <option value="">17:00</option>
-                        <option value="">19:00</option>
-                    </select>
-                </div>
-                <br>
-                <label>餐廳位置</label>
-                <br>
-                <div data-aos="fade-up">
-                    <iframe style="border: 0; width: 50%; height: 250px"
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" allowfullscreen>
-                    </iframe>
-                </div>
-          </form>
-          
-           
-        </div>
-    </section>
+                    <br>
+                    <label>餐廳位置</label>
+                    <br>
+                    <div data-aos="fade-up">
+                        <iframe style="border: 0; width: 50%; height: 250px"
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                                frameborder="0" allowfullscreen>
+                        </iframe>
+                    </div>
+                </form>
+            </div>
+        </section>
+    </div>
     <footer class="footer">
         <div class="form-group fixed-footer-content" id="finalReservation">
             <div aria-hidden="true" id="yourReservation">
@@ -81,11 +87,11 @@
 </main>
 <!-- End Book A Table Section -->
 @section Scripts
-{
-<script src="~/js/reservations.js"></script>
+    {
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+    <script>
 
-}
-
-
+    </script>
+    <script src="~/js/reservations.js"></script>
+    }
