--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -1,9 +1,9 @@
-﻿.container label{
+﻿.container label {
     color: #AAAAAA;
     font-family: "Poppins",sans-serif;
-    font-size:14px;
-
+    font-size: 14px;
 }
+
 #adultPicker {
     margin: 5px;
 }
@@ -39,6 +39,7 @@
     display: flex;
     justify-content: center;
 }
+
 #finalReservation button {
     background: #cda45e;
     color: #fff;
@@ -83,14 +84,16 @@
     margin-left: 50px;
 }
 
+
 #contactUsForm {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
+
 #customercomment {
-    margin-top:100px;
+    margin-top: 100px;
 }
 
 #contactQuestion {
@@ -108,20 +111,27 @@
     color: #aba18c;
     height: 44px;
 }
-/*booking*/
+/*datepicker*/
 .datepicker {
     width: 100%;
     border: 0px;
+    
+}
+#calendar {
+    margin-left: -5px;
+    left: 0px;
+    padding: .375rem 2.25rem .375rem .75rem;
+}
+#calendar input {
+    height: 38px;
+    color: black;
+    background-color: #fff;
+    border-radius: .25rem;
+    font-weight: 400;
+    line-height: 1.5;
+    width:100%;
 }
 
-    .datepicker input {
-        height: 38px;
-    }
-
-.people-member:focus {
-    background-color: #D8CDB9;
-}
-/*datepicker*/
 .mx-calendar-content .cell.disabled {
     background-color: #F2E6E6;
     color: #666;
@@ -146,4 +156,31 @@ option:disabled {
     background-color: #F2E6E6;
     color: #666;
 }
+/*dialog 注意事項視窗*/
+dialog {
+    border: none;
+    box-shadow: 0 2px 6px #ccc;
+    border-radius: 30px;
+}
 
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+#ruleContainer {
+    text-align: justify; /*設定左右對齊*/
+}
+
+    #ruleContainer p {
+        margin: 0 0 10px;
+    }
+
+#noticeRule {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+#noticeRule p {
+    font-family: "Poppins",sans-serif;
+    font-size: 14px;
+    color:red;
+}
