--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/ShoppingCart/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/ShoppingCart/Index.cshtml
@@ -208,6 +208,10 @@
 					</form>
 				</div>
 				<div class="cart__total">
+					<ul>
+						<li style="font-size: 20px">原價: <span>$ 169.50</span></li>
+						<li style="font-size: 20px">總價: <span>$ 169.50</span></li>
+					</ul>
 					<a href="#" class="primary-btn">提交訂單</a>
 				</div>
 			</div>
