--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/Index.cshtml
@@ -68,7 +68,7 @@
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3);">
-                <div class="product__item" style="padding:35px">
+                <div class="product__item">
                     <div class="product__item__pic set-bg">
                         <img src="~/img/menu/bread-barrel.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
                         <div class="product__label">
