--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/Shared/_Layout.cshtml
@@ -63,7 +63,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
 </body>
