--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -117,6 +117,8 @@
     <script src="~/backend/lib/tempusdominus/js/moment.min.js"></script>
     <script src="~/backend/lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="~/backend/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
 
     <!-- Template Javascript -->
     <script src="~/backend/js/main.js"></script>
